--- a/blog.css
+++ b/blog.css
@@ -9,6 +9,15 @@ html{
 body{
   background-color:#EFECCA;
 }
+#navBarWrapper{
+  text-align: center;
+  font-size: 2em;
+  padding: 1.3em;
+}
+#aboutNav{
+  color: black;
+  text-decoration: none;
+}
 
 p {
     display: inline;
