--- a/blog.css
+++ b/blog.css
@@ -19,6 +19,15 @@ body{
   text-decoration: none;
 }
 
+#aboutDiv{
+  position:fixed;
+  display:none;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: -1;
+}
+
 p {
     display: inline;
     font-family: serif;
@@ -28,6 +37,7 @@ img{
   text-align: center;
   /*margin:auto;*/
   margin: 2.5%;
+  max-width: 25%;
 
 }
 
