--- a/blog.css
+++ b/blog.css
@@ -52,7 +52,10 @@ img{
   max-width: 25%;
 
 }
-
+h1:first{
+  text-align: center;
+  font-size: 1.5em;
+}
 
 /*Color scheme:
 https://color.adobe.com/create/color-wheel/?copy=true&base=0&rule=Custom&selected=4&name=Copy%20of%20sandy%20stone%20beach%20ocean%20diver&mode=rgb&rgbvalues=0.901961,0.886275,0.686275,0.654902,0.639216,0.494118,0.937255,0.92549,0.792157,0.0156863,0.388235,0.501961,0,0.184314,0.184314&swatchOrder=0,1,2,3,4
