--- a/blog.css
+++ b/blog.css
@@ -14,18 +14,20 @@ body{
   font-size: 2em;
   padding: 1.3em;
 }
-#aboutNav{
+#gitNav{
   color: black;
   text-decoration: none;
 }
 
 #aboutDiv{
   position:fixed;
+  text-align: center;
   display:none;
   width: 100%;
   height: 100%;
   background-color: white;
-  /*z-index: -1;*/
+  margin:none;
+  margin
 }
 
 #blogName{
@@ -56,6 +58,141 @@ h1:first{
   text-align: center;
   font-size: 1.5em;
 }
+
+select{
+  height:30px;
+  line-height: 30px;
+  background-color:#f4f4f4;
+  margin: 15px;
+  margin-top: 7.5px;
+  margin-bottom: 7.5px;
+}
+option{
+color: green;
+}
+
+
+
+/* Mobile ->  phablet */
+@media screen and (min-width: 400px) {
+  .realArticle{
+    margin:5%;
+    padding-bottom: 2.5%;
+  }
+  html{
+    padding:0;
+  }
+  #blogName{
+    font-size: 1em;
+    margin-bottom: .4em
+  }
+  #filterByWrapper{
+    text-align: center;
+  }
+  .navItem{
+    display: block;
+    text-align: center;
+    font-size:.7em;
+  }
+
+  .dropdown{
+    text-align: center;
+  }
+
+  body{
+    background-color: red;
+
+  }
+
+}
+
+
+
+
+
+
+
+
+/* phablet -> desktop*/
+@media screen and (min-width: 550px) {
+  body{
+    background-color: pink;
+
+  }
+
+}
+
+
+
+
+
+
+
+/***********
+* desktop  *
+************/
+@media screen and (min-width: 1000px) {
+  #navBarWrapper{
+    text-align: center;
+    font-size: 2em;
+    padding: 1.3em;
+  }
+
+  #gitNav{
+    /*only sets git link to black//no underline */
+    color: black;
+    text-decoration: none;
+  }
+
+  #aboutDiv{
+    position:fixed;
+    display:none;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    /*z-index: -1;*/
+  }
+
+  #blogName{
+    font-family: 'Cabin' ;
+  }
+  p {
+      display: inline;
+      font-family: serif;
+      font-family: 'Cabin' ;
+  }
+  article{
+      font-family: 'Cabin' ;
+  }
+  a{
+    text-decoration: none;
+    color: black;
+    font-family: 'Cabin' ;
+  }
+  img{
+    display: block;
+    text-align: center;
+    /*margin:auto;*/
+    margin: 2.5%;
+    max-width: 25%;
+
+  }
+  h1:first{
+    text-align: center;
+    font-size: 1.5em;
+  }
+
+  body{
+    background-color: white;
+
+  }
+
+}
+
+
+
+
+
 
 /*Color scheme:
 https://color.adobe.com/create/color-wheel/?copy=true&base=0&rule=Custom&selected=4&name=Copy%20of%20sandy%20stone%20beach%20ocean%20diver&mode=rgb&rgbvalues=0.901961,0.886275,0.686275,0.654902,0.639216,0.494118,0.937255,0.92549,0.792157,0.0156863,0.388235,0.501961,0,0.184314,0.184314&swatchOrder=0,1,2,3,4
