--- a/blog.css
+++ b/blog.css
@@ -1,3 +1,8 @@
+/*************
+* Base Rules *
+**************/
+
+
 *{
     margin: 0;
     padding: 0;
@@ -9,6 +14,7 @@ html{
 body{
   background-color:#EFECCA;
 }
+
 #navBarWrapper{
   text-align: center;
   font-size: 2em;
@@ -73,11 +79,11 @@ select{
   margin-top: 7.5px;
   margin-bottom: 7.5px;
 }
-option{
-color: green;
-}
 
 
+/***************
+* Mobile Rules *
+****************/
 
 /* Mobile ->  phablet */
 @media screen and (min-width: 400px) {
@@ -121,6 +127,9 @@ color: green;
 
 
 
+/***************
+* Tablet Rules *
+****************/
 /* phablet -> desktop*/
 @media screen and (min-width: 550px) {
   body{
@@ -136,9 +145,9 @@ color: green;
 
 
 
-/***********
-* desktop  *
-************/
+/*****************
+* Desktop Rules  *
+*****************/
 @media screen and (min-width: 1000px) {
   #navBarWrapper{
     text-align: center;
