--- a/blog.css
+++ b/blog.css
@@ -73,7 +73,7 @@ h1:first{
 
 select{
   height:30px;
-  line-height: 30px;
+  /*line-height: 30px;*/
   background-color:#f4f4f4;
   margin: 15px;
   margin-top: 7.5px;
