corrected bug for live html output repeat and changed .append to .html

--- a/secret.css
+++ b/secret.css
@@ -1,26 +1,39 @@
-body {
+.secretPageBody {
   margin: 20px;
-}
-
-.userInput {
   display: block;
 }
 
-.divBlock {
+.userInputContainer {
+  width: 100%;
+}
+
+.outputDivContainer {
+  width: 100%;
+}
+
+/*.divBlock {
   display: block;
   vertical-align: top;
   width: 47%;
   padding: 2px;
-}
-#userInputBody {
+}*/
+
+/*#userInputBody {
   width: 36%;
-}
-.pCommon {
+}*/
+/*.pCommon {
   display: block;
   width: 80%; height: 30%;
   border: 1px solid black;
   padding: 2px;
-}
-.pOut {
+}*/
+/*.pOut {
   display: block;
+}*/
+
+@media (min-width: 769px){
+  .userInputContainer{
+    width: 100%;
+  }
+
 }
