Nearly complete. Needs CSS work and need to determine JSON format or object for the cutting/pasting requirement

--- a/blog.css
+++ b/blog.css
@@ -118,6 +118,21 @@ select{
 
   }
 
+  .secretPageBody {
+    margin: 20px;
+    text-align: left;
+  }
+
+  .userInputContainer {
+    margin-top: 15px;
+    margin-right: 0;
+    max-width: 400px;
+  }
+  .outputDivContainer{
+    margin-top: 15px;
+  }
+
+
 }
 
 
