--- a/secret.css
+++ b/secret.css
@@ -1,39 +1,46 @@
 .secretPageBody {
   margin: 20px;
-  display: block;
+  background: #fff;
+}
+
+.secretPageBody h2 {
+  margin: 5px;
+  font-size: 1em;
+}
+
+.userInput h2 {
+  margin: 5px;
+  font-size: 1em;
 }
 
 .userInputContainer {
-  width: 100%;
+  display: inline-block;
+  width: 400px;
+  border: black solid;
+  vertical-align: top;
+  float: left;
 }
 
 .outputDivContainer {
-  width: 100%;
+  border: solid #000;
+  display: inline-block;
+  float: left;
+  vertical-align: top;
 }
 
-/*.divBlock {
-  display: block;
-  vertical-align: top;
-  width: 47%;
-  padding: 2px;
-}*/
+.outputDiv {
+  border: solid black;
+}
 
-/*#userInputBody {
-  width: 36%;
-}*/
-/*.pCommon {
-  display: block;
-  width: 80%; height: 30%;
-  border: 1px solid black;
-  padding: 2px;
-}*/
-/*.pOut {
-  display: block;
-}*/
-
-@media (min-width: 769px){
-  .userInputContainer{
-    width: 100%;
+@media (min-width: 853px){
+  .userInputContainer {
+    width: 400px;
   }
 
+  .outputDivContainer {
+    width: 800px;
+    float: left;
+    margin-left: 10px;
+
+  }
 }
