got css functional, if not pretty

--- a/secret.css
+++ b/secret.css
@@ -2,6 +2,26 @@
 * Base Rules *
 **************/
 
+.userInput {
+  display: inline;
+  vertical-align: top;
+  width: 20%;
+  padding: 2px;
+
+}
+#tBody {
+  font-size: 1em;
+}
+.input {
+  width: 30%;
+  height: 2em;
+  border: 1px solid black;
+  padding: 2px;
+}
+.pOut {
+  display: block;
+}
+
 
 *{
     margin: 0;
@@ -80,8 +100,27 @@ select{
   margin-bottom: 7.5px;
 }
 
+.userInput {
+  display: inline;
+  vertical-align: top;
+  width: 30%;
+  padding: 2px;
+  border: black 1px;
+}
 
-
+#htmlOut{
+  overflow: auto;
+  width: 45%;
+  display: block;
+}
+#jsonOut{
+  overflow: auto;
+  width: 45%;
+  display:inline;
+}
+#codeOutput{
+  display: block;
+}
 
 
 /***************
@@ -172,7 +211,22 @@ select{
     background-color: white;
     /*z-index: -1;*/
   }
-
+  .realArticle{
+    width: 50%;
+    height:50%;
+    display: inline;
+  }
+  #articleDemo{
+    width: 50%;
+    height:50%;
+    display: inline;
+  }
+  #userInputWrapper{
+    display: block;
+    text-align: center;
+    width:35%;
+    height: 70%;
+  }
   #blogName{
     font-family: 'Cabin' ;
   }
